--- a/Style.css
+++ b/Style.css
@@ -36,11 +36,13 @@ header {
   padding: 40px 0;
   text-align: center;
   font-size: 30px;
+   border-bottom: 8px solid #fff4f8;
 }
 header h1 {
   font-family: 'Abril Fatface', cursive;
-  font-size: ;
+  font-size: 3.5rem;
   letter-spacing: 2px;
+  margin-bottom: 8px;
 }
 header p {
   font-family: 'Raleway', sans-serif;
@@ -50,10 +52,28 @@ header p {
   opacity: 0.85;
 }
 
+nav {
+    background-color: #071f3e;
+    padding: 16px 0;
+}
+
 nav ul {
   display: flex;
-  gap: 50px;
+  gap: 40px;
   justify-content: center;
+}
+nav li {
+    list-style: none;
+    font-weight: 600;
+}
+nav a {
+  color: #fff4f8;
+  text-decoration:none;
+  font-family: 'Raleway', sans-serif;
+}
+nav a:hover {
+  opacity: 0.5;
+  transition: 0.2s;
 }
 .hero {
   display: flex;
