--- a/Style.css
+++ b/Style.css
@@ -120,6 +120,7 @@ nav a:hover {
   border-radius: 8px;
   border: none;
   background-color:#f47729;
+  color: #fff4f8;
   font-weight: bold; 
   cursor: pointer;
 }
@@ -159,4 +160,10 @@ nav a:hover {
 
  .recomendaciones p {
     font-family:'Raleway', sans-serif;
+}
+.cta-recs {
+    padding: 50px;
+    text-align: center;
+    font-size: 20px;
+    letter-spacing: 1.5px;
 }
