--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ nav a:hover {
   transition: 0.2s;
 }
 .hero {
-  background-image: url(Images/pexels-234741447-12432817.jpg)
-  background-size:cover;
+  background-image: url(/Images/pexels-234741447-12432817.jpg);
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 
